--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions: write
+    permissions: write-all
 
     steps:
       - uses: actions/checkout@v4
