--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=rh-system-api
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 spring.boot.admin.client.url=http://localhost:8080
+springdoc.api-docs.path=/api-docs
+spring.profiles.active=${PROFILE:default}
