--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: "gradle"
-    directory: "/"
     schedule:
       interval: "daily"
+      version: 2
+      target-branch: main
