Update Dependabot config to improve review process
Changed the update schedule from daily to weekly and added reviewers, assignees, and labels to streamline dependency management. This enhances control over updates and ensures better review coverage.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,17 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-
 version: 2
 updates:
   - package-ecosystem: "gradle"
+    directory: "/" # Root directory of your project
     schedule:
-      interval: "daily"
+      interval: "weekly" # Choose between daily, weekly, or monthly
+    open-pull-requests-limit: 5
+    commit-message:
+      prefix: "deps"
+      include: "scope"
+    labels:
+      - "dependencies"
+      - "gradle"
+    reviewers:
+      - "joaoh4547" # Replace with GitHub team or username
+    assignees:
+      - "joaoh4547" # Replace with the desired GitHub username
