--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ management.endpoint.health.show-details=always
 spring.boot.admin.client.url=http://localhost:8080
 springdoc.api-docs.path=/api-docs
 spring.profiles.active=${PROFILE:default}
+spring.jpa.show-sql=true
